Fix code to become compatible with Java 11